[package]
name = "ic_identity_kms"
description = "Identity on Internet Computer integrated with AWS KMS"
homepage = "https://githum.com/horizonx-tech/ic-identity-kms-rs"
readme = "README.md"
categories = ["kms", "identity", "internet-computer", "icp", "aws"]
edition = "2021"
version = "0.1.0"

[dependencies]
async-trait = "0.1.77"
aws-config = "1.1.5"
aws-sdk-kms = "1.13.0"
ecdsa = "0.16.9"
ic-agent = { git = "https://github.com/hide-yoshi/agent-rs", version = "0.33.0" }
p256 = "0.13.2"
sha2 = "0.10.8"
sha256 = "1.5.0"
tokio = { version = "1", features = ["full"] }
